# rlib

./: Cargo.toml  Makefile.toml  README.md  pyproject.toml
python/benchmarks/: benchmarks.py
python/rlib/: __init__.py  py_pricer.py
rlib/: __init__.py  py_pricer.py
rlib/python/: __init__.py  py_pricer.py
rlib/tests/: test_py_pricer.py
src/: lib.rs  rust_pricer.rs
