[package]
name = "rlib"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rlib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.2"
pyo3-polars = "0.7.0"
polars = {version = "0.33.2", features = ["lazy"]}
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
statrs = "0.16.0"

[profile.release]
lto = true